tdf#93998 toolkit: restore support for setting dialog background from shape

Regression from commit fb29e6eeeaad5255bb924ff59162a83ed80bfb0a (svx:
removing GraphicURL and OWN_ATTR_GRAFURL, fix writerfilter, 2018-03-08),
the problem was that an in-document macro tried to assign a bitmap shape
to a dialog background, which broke during the image handling rework.

Note that in this case the actual type of the "URL" is not interesting,
we can just return an XGraphic and then take it on the other side as
well, without re-introducing the intentionally removed graphic URLs
which point to memory addresses.

This also made it necessary to extend
UnoDialogControl::ImplModelPropertiesChanged(), so that in case a
graphic is assigned to the dialog model, then the dialog model -> dialog
sync code doesn't just copy over the empty image URL string. With this,
finally clicking on the button of the bugdoc makes the dialog show up
with the correct background.

(cherry picked from commit 3341986547b69bcb4c38e4ccb2f0853a3a569bb5)

Change-Id: Id78269643289efb435b96a6a0b9f8a93fa49ec04